--- a/css/main.css
+++ b/css/main.css
@@ -267,7 +267,9 @@ padding: 10px;
         padding: 40px;
         font-size: 18px;
     }
-    
+     .prog .fro span {
+        font-size: 14px;
+    }
     .prog .back {
         width: 100%;
         margin-top: 10px;
